[package]
name = "fast-tak"
version = "0.4.1"
edition = "2021"
license = "MIT"
rust-version = "1.65"

description = "Implementation of the abstract strategy board game Tak"
homepage = "https://github.com/ViliamVadocz/fast-tak"
documentation = "https://docs.rs/fast-tak"
repository = "https://github.com/ViliamVadocz/fast-tak"
readme = "README.md"

keywords = ["tak", "game"]

[dependencies]
takparse = "0.6.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "warn"
nursery = "warn"
style = "warn"
module_name_repetitions = "allow"
